<resources>
    <string name="app_name">Fisbang</string>
    <string name="title_building">BUILDING</string>
    <string name="title_store">STORE+</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_control">Control</string>
    <string name="title_energy">Energy</string>
    <string name="title_savings">Savings</string>
    <string name="title_energy_consumption">Energy Consumption</string>
    <string name="title_saving_energy">Saving Energy!</string>

    <string name="add_new_building">Add new building</string>
    <string name="add_new_control">Add new control</string>
    <string name="find_out_how">Find Out How!</string>

    <string name="txt_building_name">BUILDING NAME</string>
    <string name="txt_control_your">Control Your Home</string>
</resources>
