<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/main_color"
        android:padding="16dp"
        android:text="@string/txt_building_name"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_saving_energy"
            android:textColor="@color/label"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:gravity="right|top"
            android:text="Date here..."
            android:textColor="@color/label"
            android:textSize="10sp" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart_saving"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp" />

    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/control_bg_blue"
        android:padding="16dp"
        android:text="@string/find_out_how"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>
