<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/main_light_color"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:gravity="center"
        app:subtitleTextColor="@android:color/white"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_building"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/layout_btn_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_bg_control"
                android:src="@drawable/ic_electricity_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_energy"
                android:textColor="@color/fb_blue"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_bg_control"
                android:src="@drawable/ic_electricity_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_control"
                android:textColor="@color/fb_blue"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="48dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_bg_control"
                android:src="@drawable/ic_electricity_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_savings"
                android:textColor="@color/fb_blue"
                android:textSize="11sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
