<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/main_light_color"
        android:clipToPadding="false"
        android:gravity="center"
        app:subtitleTextColor="@android:color/white"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/txt_toolbar_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_building"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/main_color" />

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/light_gray"
        android:gravity="bottom"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/layout_btn_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_btn_energy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_big_energy_active" />

            <TextView
                android:id="@+id/txt_btn_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_energy"
                android:textColor="@color/main_accent"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_btn_control"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_big_control_inactive" />

            <TextView
                android:id="@+id/txt_btn_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_control"
                android:textColor="@color/label"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="48dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_btn_saving"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_big_saving_inactive" />

            <TextView
                android:id="@+id/txt_btn_saving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_savings"
                android:textColor="@color/label"
                android:textSize="11sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
